2007-08-02  Neal H. Walfield  <neal@gnu.org>

	* ia32-cmain.c (find_components): Save the correct module number.

	* loader.c (loader_add_region): When relocating a region, set the
	new start and end after calling the callback.
	
	(loader_regions_reserve): Only convert region descriptors on a V2
	kernel.

2007-07-30  Neal H. Walfield  <neal@gnu.org>

	* kip-fixup.c (kip_fixup): Use a symbolic name rather than a magic
	number.

	[_L4_X2]: Set KIP->MEMORY_INFO.NR to MEMORY_MAP_SIZE.

	* laden.c (load_components): Don't add L4 memory maps
	corresponding to the the kernel's, sigma0's, sigma1's or the root
	task's image.

	* loader.c (mem_check): Add debugging output.
	
	(loader_regions_reserve): Round USED_REGIONS[I].START and
	USED_REGIONS[I].END appropriately.

2007-07-27  Neal H. Walfield  <neal@gnu.org>

	* laden.h (add_memory_map): Improve comment.
	* loader.h (loader_add_region): Likewise.
	(loader_remove_region): Likewise.

	* laden.c (memory_map): Move from here...
	* loader.c (memory_map): ... to here.
	* laden.c (memory_map_size): Move from here...
	* loader.c (memory_map_size): ... to here.
	* laden.c (loader_get_num_memory_desc): Move from here...
	* loader.c (loader_get_num_memory_desc): ... to here.
	* laden.c (loader_get_memory_desc): Move from here...
	* loader.c (loader_get_memory_desc): ... to here.

	* kip-fixup.c (kip_fixup): Don't call loader_regions_reserve
	here...
	* laden.c (main): ... but here.

	* loader.c (mem_check): Don't decrement end.

2007-07-26  Neal H. Walfield  <neal@gnu.org>

	* loader.h (loader_add_region): Take an additional parameter, the
	L4 descriptor type.  Update callers.
	(loader_elf_load): Likewise.
	(loader_regions_reserve): New function.
	* loader.c: Add field desc_type.
	(loader_add_region): Take an additional parameter, an L4
	descriptor type.  Save it in the allocated descriptor.  Round the
	start address to a page boundary.
	(loader_remove_region): Remove all regions with the name NAME, not
	just the first one.